ingress-1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/limit-rps: "3000"
    ingress.kubernetes.io/proxy-read-timeout: "300"
    ingress.kubernetes.io/secure-backends: "true"
  name: ingress-1
spec:
  rules:
  - host: mydomain.com
    http:
      paths:
      - backend:
          serviceName: hello-world
          servicePort: 80
        path: /
      - backend:
          serviceName: my-hello-svc
          servicePort: 8000
        path: /
