ingress-2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ingress.class: nginx-gateway
  name: ingress-2
spec:
  rules:
  - host: echo.com
    http:
      paths:
      - backend:
          serviceName: echo
          servicePort: 80
        path: /
      - backend:
          serviceName: echo-svc
          servicePort: 8000
        path: /
